Implement Layout styles

--- a/src/includes/topbar.html
+++ b/src/includes/topbar.html
@@ -7,8 +7,9 @@
                 <img src="{{site.baseurl}}/assets/images/logo-text-dark.svg" alt="prime" id="mobile-logo">
             </a>
             <a class="mobile-search-button" id="mobile-search-button" onclick="PrimeFlex.onSearchClick(event)"><i
-                    class="pi pi-search"></i></a> -->
+                class="pi pi-search"></i></a> -->
             <a href="/" class="logo">
+                <!-- <img src="assets/logo.png" alt="prime" id="mobile-logo"> -->
                 <div><span>ANY</span>WHERE<span>Flex</span></div>
             </a>
         </div>
