--- a/src/styles/lib/anywhere-flex.scss
+++ b/src/styles/lib/anywhere-flex.scss
@@ -2,8 +2,14 @@
 @import './src/_mixins';
 @import './src/_flexbox';
 @import './src/_display';
+@import './src/_typography';
 @import './src/_grid';
 @import './src/_overflow';
 @import './src/_colors';
 @import './src/_padding';
 @import './src/_spacing';
+@import './src/_border';
+@import './src/_size';
+@import './src/_position';
+@import './src/_zindex';
+@import './src/_elevation';
