Implemented Flexbox styles

--- a/src/includes/navigation.html
+++ b/src/includes/navigation.html
@@ -134,7 +134,7 @@
         <div class="menuitem-root-text mt-3">
             Flex
         </div>
-        <a data-link href="/#/flex" style="display: block">
+        <a data-link href="/#/flex-home" style="display: block">
             Flex
         </a>
     </li>
