--- a/src/includes/topbar.html
+++ b/src/includes/topbar.html
@@ -15,7 +15,7 @@
         </div>
 
         <div class="layout-topbar-left">
-            <a href="/" class="logo">
+            <a href="" class="logo">
                 <div><span>ANY</span>WHERE<span>Flex</span></div>
             </a>
             <!-- <a href="{{site.baseurl}}">
