Implemented site mobile menu button

--- a/src/includes/topbar.html
+++ b/src/includes/topbar.html
@@ -1,9 +1,8 @@
 <header>
     <div class="layout-topbar flex align-items-center justify-content-between">
         <div class="mobile-menu-wrapper">
-            <!-- <a class="mobile-button" id="mobile-button" onclick="PrimeFlex.onToggleMobileMenu(event)"><i
-                    class="pi pi-bars"></i></a>
-            <a href="{{site.baseurl}}">
+            <a class="mobile-button" id="mobile-button"><span class="iconify" data-icon="fa:bars"></span></a>
+            <!-- <a href="{{site.baseurl}}">
                 <img src="{{site.baseurl}}/assets/images/logo-text-dark.svg" alt="prime" id="mobile-logo">
             </a>
             <a class="mobile-search-button" id="mobile-search-button" onclick="PrimeFlex.onSearchClick(event)"><i
@@ -15,7 +14,7 @@
         </div>
 
         <div class="layout-topbar-left">
-            <a href="" class="logo">
+            <a href="/" class="logo">
                 <div><span>ANY</span>WHERE<span>Flex</span></div>
             </a>
             <!-- <a href="{{site.baseurl}}">
